--- a/Consultor3D/package.json
+++ b/Consultor3D/package.json
@@ -1,7 +1,7 @@
 {
   "name": "consultor3d",
   "version": "1.0.0",
-  "description": "Consultor 3D com geração de imagem (OpenAI) e chat",
+  "description": "Consultor 3D com chat via Gemini",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -9,9 +9,9 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "openai": "^4.57.0"
+    "express": "^4.19.2"
   }
 }
